--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -22,7 +22,18 @@
                 </ul>
                 {% if site.minimal_mistakes_dark %}
                 <i aria-hidden="true" class="fas fa-fw fa-adjust"
-                   onclick="node1=document.getElementById('theme_source');node2=document.getElementById('theme_source_2');if(node1.getAttribute('rel')=='stylesheet'){node1.setAttribute('rel', 'stylesheet alternate'); node2.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'dark');}else{node2.setAttribute('rel', 'stylesheet alternate'); node1.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'light');} return false;"></i>
+                   onclick="
+                   node1 = document.getElementById('theme_source');
+                   node2 = document.getElementById('theme_source_2');
+                   if (node1.getAttribute('rel') === 'stylesheet') {
+                       node1.setAttribute('rel', 'stylesheet alternate');
+                       node2.setAttribute('rel', 'stylesheet');
+                       sessionStorage.setItem('theme', 'dark');
+                   } else {
+                       node2.setAttribute('rel', 'stylesheet alternate');
+                       node1.setAttribute('rel', 'stylesheet');
+                       sessionStorage.setItem('theme', 'light');
+                   } return false;"></i>
                 {% endif %}
                 {% if site.search == true %}
                 <button class="search__toggle" type="button">
