added light/dark switch
Signed-off-by: Kellen Miller <kellen.miller12@gmail.com>

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -21,7 +21,7 @@
                     {%- endfor -%}
                 </ul>
                 {% if site.minimal_mistakes_dark %}
-                <i aria-hidden="true" class="fas fa-fw fa-adjust"
+                <i aria-hidden="true" class="fas fa-fw fa-duotone fa-moon-over-sun"
                    onclick="
                    node1 = document.getElementById('theme_source');
                    node2 = document.getElementById('theme_source_2');
