added light/dark switch
Signed-off-by: Kellen Miller <kellen.miller12@gmail.com>

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -3,10 +3,9 @@
 <div class="masthead">
     <div class="masthead__inner-wrap">
         <div class="masthead__menu">
-            <nav class="greedy-nav" id="site-nav">
+            <nav id="site-nav" class="greedy-nav">
                 {% unless logo_path == empty %}
-                <a class="site-logo" href="{{ '/' | relative_url }}"><img
-                        alt="{{ site.masthead_title | default: site.title }}" src="{{ logo_path | relative_url }}"></a>
+                <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt="{{ site.masthead_title | default: site.title }}"></a>
                 {% endunless %}
                 <a class="site-title" href="{{ '/' | relative_url }}">
                     {{ site.masthead_title | default: site.title }}
@@ -15,14 +14,12 @@
                 <ul class="visible-links">
                     {%- for link in site.data.navigation.main -%}
                     <li class="masthead__menu-item">
-                        <a %}%} endif href="{{ link.url | relative_url }}" if
-                           link.descriptiontitle="{{ link.description }}" {% {%>{{ link.title }}</a>
+                        <a href="{{ link.url | relative_url }}"{% if link.description %} title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
                     </li>
                     {%- endfor -%}
                 </ul>
                 {% if site.minimal_mistakes_skin2 %}
-                <i aria-hidden="true" class="fas fa-fw fa-duotone fa-moon-over-sun"
-                   onclick="node1=document.getElementById('theme_source');node2=document.getElementById('theme_source_2');if(node1.getAttribute('rel')=='stylesheet'){node1.setAttribute('rel', 'stylesheet alternate'); node2.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'dark');}else{node2.setAttribute('rel', 'stylesheet alternate'); node1.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'light');} return false;"></i>
+                <i class="fas fa-fw fa-adjust" aria-hidden="true" onclick="node1=document.getElementById('theme_source');node2=document.getElementById('theme_source_2');if(node1.getAttribute('rel')=='stylesheet'){node1.setAttribute('rel', 'stylesheet alternate'); node2.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'dark');}else{node2.setAttribute('rel', 'stylesheet alternate'); node1.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'light');} return false;"></i>
                 {% endif %}
                 {% if site.search == true %}
                 <button class="search__toggle" type="button">
