--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -14,12 +14,24 @@
                 <ul class="visible-links">
                     {%- for link in site.data.navigation.main -%}
                     <li class="masthead__menu-item">
-                        <a href="{{ link.url | relative_url }}"{% if link.description %} title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
+                        <a href="{{ link.url | relative_url }}" {% if link.description %} title="{{ link.description }}"
+                           {% endif %}>{{ link.title }}</a>
                     </li>
                     {%- endfor -%}
                 </ul>
                 {% if site.minimal_mistakes_dark %}
-                <i class="fas fa-fw fa-duotone fa-moon-over-sun" aria-hidden="true" onclick="node1=document.getElementById('theme_source');node2=document.getElementById('theme_source_2');if(node1.getAttribute('rel')=='stylesheet'){node1.setAttribute('rel', 'stylesheet alternate'); node2.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'dark');}else{node2.setAttribute('rel', 'stylesheet alternate'); node1.setAttribute('rel', 'stylesheet');sessionStorage.setItem('theme', 'light');} return false;"></i>
+                <i aria-hidden="true" class="fas fa-fw fa-duotone fa-moon-over-sun"
+                   onclick="
+                   node1=document.getElementById('light_theme');
+                   node2=document.getElementById('dark_theme');
+                   if (node1.getAttribute('rel') === 'stylesheet') {
+                       node1.setAttribute('rel', 'stylesheet alternate');
+                       node2.setAttribute('rel', 'stylesheet');
+                       sessionStorage.setItem('theme', 'dark');
+                   } else{node2.setAttribute('rel', 'stylesheet alternate');
+                       node1.setAttribute('rel', 'stylesheet');
+                       sessionStorage.setItem('theme', 'light');
+                   } return false;"></i>
                 {% endif %}
                 {% if site.search == true %}
                 <button class="search__toggle" type="button">
