added light/dark switch
Signed-off-by: Kellen Miller <kellen.miller12@gmail.com>

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -27,7 +27,8 @@
                        node1.setAttribute('rel', 'stylesheet alternate');
                        node2.setAttribute('rel', 'stylesheet');
                        sessionStorage.setItem('theme', 'dark');
-                   } else{node2.setAttribute('rel', 'stylesheet alternate');
+                   } else{
+                       node2.setAttribute('rel', 'stylesheet alternate');
                        node1.setAttribute('rel', 'stylesheet');
                        sessionStorage.setItem('theme', 'light');
                    } return false;"></i>
