--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -5,39 +5,43 @@
         <div class="masthead__menu">
             <nav id="site-nav" class="greedy-nav">
                 {% unless logo_path == empty %}
-                <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt="{{ site.masthead_title | default: site.title }}"></a>
+                    <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt="{{ site.masthead_title | default: site.title }}"></a>
                 {% endunless %}
                 <a class="site-title" href="{{ '/' | relative_url }}">
                     {{ site.masthead_title | default: site.title }}
-                    {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
+                    {% if site.subtitle %}
+                        <span class="site-subtitle">{{ site.subtitle }}</span>
+                    {% endif %}
                 </a>
                 <ul class="visible-links">
                     {%- for link in site.data.navigation.main -%}
-                    <li class="masthead__menu-item">
-                        <a href="{{ link.url | relative_url }}"{% if link.description %} title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
-                    </li>
+                        <li class="masthead__menu-item">
+                            <a href="{{ link.url | relative_url }}"{% if link.description %}
+                               title="{{ link.description }}"{% endif %}>{{ link.title }}
+                            </a>
+                        </li>
                     {%- endfor -%}
                 </ul>
-                {% if site.minimal_mistakes_dark %}
-                <i class="fas fa-fw fa-duotone fa-moon-over-sun" aria-hidden="true"
+                <i class="fas fa-fw fa-duotone fa-moon-over-sun"
+                   aria-hidden="true"
                    onclick="
-                   node1=document.getElementById('light_theme');
-                   node2=document.getElementById('dark_theme');
-                   if (node1.getAttribute('rel') === 'stylesheet') {
-                       node1.setAttribute('rel', 'stylesheet alternate');
-                       node2.setAttribute('rel', 'stylesheet');
-                       sessionStorage.setItem('theme', 'dark');
-                   } else{
-                       node2.setAttribute('rel', 'stylesheet alternate');
-                       node1.setAttribute('rel', 'stylesheet');
-                       sessionStorage.setItem('theme', 'light');
-                   } return false;"></i>
-                {% endif %}
+                       node1=document.getElementById('light_theme');
+                       node2=document.getElementById('dark_theme');
+                       if (node1.getAttribute('rel') === 'stylesheet') {
+                           node1.setAttribute('rel', 'stylesheet alternate');
+                           node2.setAttribute('rel', 'stylesheet');
+                           sessionStorage.setItem('theme', 'dark');
+                       } else{
+                           node2.setAttribute('rel', 'stylesheet alternate');
+                           node1.setAttribute('rel', 'stylesheet');
+                           sessionStorage.setItem('theme', 'light');
+                       } return false;"
+                ></i>
                 {% if site.search == true %}
-                <button class="search__toggle" type="button">
-                    <span class="visually-hidden">{{ site.data.ui-text[site.locale].search_label | default: "Toggle search" }}</span>
-                    <i class="fas fa-search"></i>
-                </button>
+                    <button class="search__toggle" type="button">
+                        <span class="visually-hidden">{{ site.data.ui-text[site.locale].search_label | default: "Toggle search" }}</span>
+                        <i class="fas fa-search"></i>
+                    </button>
                 {% endif %}
                 <button class="greedy-nav__toggle hidden" type="button">
                     <span class="visually-hidden">{{ site.data.ui-text[site.locale].menu_label | default: "Toggle menu" }}</span>
