--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,24 +14,7 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" id="light_theme">
-{% if site.minimal_mistakes_dark %}
-    <link rel="stylesheet alternate" href="{{ '/assets/css/dark.css' | relative_url }}" id="dark_theme">
-    <script>
-        let theme = sessionStorage.getItem('theme');
-        if (theme === "dark") {
-            sessionStorage.setItem('theme', 'dark');
-            node1 = document.getElementById('light_theme');
-            node2 = document.getElementById('dark_theme');
-            node1.setAttribute('rel', 'stylesheet alternate');
-            node2.setAttribute('rel', 'stylesheet');
-        }
-        else {
-            sessionStorage.setItem('theme', 'light');
-        }
-    </script>
-{% endif %}
-
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as="style"
       onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
