--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -23,19 +23,7 @@
                     {%- endfor -%}
                 </ul>
                 <i class="fas fa-fw fa-duotone fa-moon-over-sun"
-                   aria-hidden="true"
-                   onclick="
-                       node1=document.getElementById('light_theme');
-                       node2=document.getElementById('dark_theme');
-                       if (node1.getAttribute('rel') === 'stylesheet') {
-                           node1.setAttribute('rel', 'stylesheet alternate');
-                           node2.setAttribute('rel', 'stylesheet');
-                           sessionStorage.setItem('theme', 'dark');
-                       } else{
-                           node2.setAttribute('rel', 'stylesheet alternate');
-                           node1.setAttribute('rel', 'stylesheet');
-                           sessionStorage.setItem('theme', 'light');
-                       } return false;"
+                   onclick="toggleTheme()"
                 ></i>
                 {% if site.search == true %}
                     <button class="search__toggle" type="button">
