--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -1,4 +1,4 @@
 @charset "utf-8";
 
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_dark | default: 'dark' }}"; // skin
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin_dark | default: 'dark' }}"; // skin
 @import "minimal-mistakes"; // main partials
