--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+{% if site.minimal_mistakes_skin_dark %}
+    <link rel="stylesheet" href="{{ '/assets/css/dark.css' | relative_url }}">
+{% endif %}
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as="style"
       onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
