--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,9 +14,10 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" id="light_theme">
 {% if site.minimal_mistakes_skin_dark %}
-    <link rel="stylesheet" href="{{ '/assets/css/dark.css' | relative_url }}">
+    <link rel="stylesheet alternate" href="{{ '/assets/css/dark.css' | relative_url }}" id="dark_theme">
+    <script>setInitialTheme()</script>
 {% endif %}
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as="style"
       onload="this.onload=null;this.rel='stylesheet'">
