added light/dark switch
Signed-off-by: Kellen Miller <kellen.miller12@gmail.com>

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -24,7 +24,7 @@
                 </ul>
                 {% if site.minimal_mistakes_skin_dark %}
                     <button type="button" style="background-color: transparent; border-color: transparent">
-                        <img onclick="toggleTheme()" class="fas fa-fw" aria-hidden="true" src="/assets/images/dark.png" alt="" id="light_dark_icon">
+                        <img class="fas fa-fw" aria-hidden="true" src="/assets/images/dark.png" alt="" id="light_dark_icon">
                     </button>
                 {% endif %}
                 {% if site.search == true %}
