--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -24,7 +24,24 @@
                 </ul>
                 {% if site.minimal_mistakes_skin_dark %}
                     <button type="button" style="background-color: transparent; border-color: transparent">
-                        <img class="fas fa-fw" aria-hidden="true" src="/assets/images/dark.png" alt="" id="light_dark_icon">
+                        <img class="fas fa-fw" aria-hidden="true" src="/assets/images/dark.png" alt="" id="light_dark_icon"
+                        onclick="
+                            let theme = sessionStorage.getItem('theme');
+                            let lightTheme = document.getElementById('light_theme');
+                            let darkTheme = document.getElementById('dark_theme');
+                            let icon = document.getElementById('light_dark_icon');
+                            if (theme === 'dark') {
+                                lightTheme.setAttribute('rel', 'stylesheet alternate');
+                                darkTheme.setAttribute('rel', 'stylesheet');
+                                icon.setAttribute('src', '/assets/images/light.png')
+                                sessionStorage.setItem('theme', 'dark');
+                            } else {
+                                darkTheme.setAttribute('rel', 'stylesheet alternate');
+                                lightTheme.setAttribute('rel', 'stylesheet');
+                                icon.setAttribute('src', '/assets/images/dark.png')
+                                sessionStorage.setItem('theme', 'light');
+                            }"
+                        >
                     </button>
                 {% endif %}
                 {% if site.search == true %}
