--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -23,9 +23,8 @@
                     {%- endfor -%}
                 </ul>
                 {% if site.minimal_mistakes_skin_dark %}
-                    <button type="button" style="background-color: transparent; border-color: transparent">
-                        <img class="fas fa-fw" aria-hidden="true" src="/assets/images/dark.png" alt="" id="light_dark_icon"
-                        onclick="
+                    <button type="button" style="background-color: transparent; border-color: transparent"
+                            onclick="
                             let theme = sessionStorage.getItem('theme');
                             let lightTheme = document.getElementById('light_theme');
                             let darkTheme = document.getElementById('dark_theme');
@@ -40,8 +39,9 @@
                                 lightTheme.setAttribute('rel', 'stylesheet');
                                 icon.setAttribute('src', '/assets/images/dark.png')
                                 sessionStorage.setItem('theme', 'light');
-                            }"
-                        >
+                            }
+                            return false;">
+                        <img class="fas fa-fw" aria-hidden="true" src="/assets/images/dark.png" alt="" id="light_dark_icon">
                     </button>
                 {% endif %}
                 {% if site.search == true %}
