added light/dark switch
Signed-off-by: Kellen Miller <kellen.miller12@gmail.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,22 +16,20 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" id="light_theme">
 {% if site.minimal_mistakes_skin_dark %}
-    <link rel="stylesheet alternate" href="{{ '/assets/css/dark.css' | relative_url }}" id="dark_theme">
-    <script>
-        let theme = sessionStorage.getItem('theme');
-        let icon = document.getElementById('light_dark_icon');
-        if (theme === "dark") {
-            sessionStorage.setItem('theme', 'dark');
-            lightTheme = document.getElementById('light_theme');
-            darkTheme = document.getElementById('dark_theme');
-            lightTheme.setAttribute('light_theme', 'stylesheet alternate');
-            darkTheme.setAttribute('dark_theme', 'stylesheet');
-            icon.setAttribute('src', '/assets/images/light.png')
-        } else {
-            sessionStorage.setItem('theme', 'light');
-            icon.setAttribute('src', '/assets/images/dark.png')
-        }
-    </script>
+<link rel="stylesheet alternate" href="{{ '/assets/css/dark.css' | relative_url }}" id="theme_source_2">
+<script>
+    let theme = sessionStorage.getItem('theme');
+    if (theme === "dark") {
+        sessionStorage.setItem('theme', 'dark');
+        node1 = document.getElementById('theme_source');
+        node2 = document.getElementById('theme_source_2');
+        node1.setAttribute('rel', 'stylesheet alternate');
+        node2.setAttribute('rel', 'stylesheet');
+    }
+    else {
+        sessionStorage.setItem('theme', 'light');
+    }
+</script>
 {% endif %}
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as="style"
       onload="this.onload=null;this.rel='stylesheet'">
